<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/QualifyingMenuScrollView" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QualifyingMenuTitle"
        android:id="@+id/QualifyingMenuTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="18dp"
        android:layout_marginTop="53dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QualifyingMenuDescription"
        android:id="@+id/QualifyingMenuDescription"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/QualifyingMenuTitle"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QualifyingMenuPar"
        android:id="@+id/QualifyingMenuPar"
        android:textSize="18dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/QualifyingMenuDescription"
        android:layout_centerHorizontal="true"/>

    <!--android:layout_alignParentTop="true" -->
    <Button
        android:id="@+id/RoundOneActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/QualifyingMenuPar"
        android:onClick="RoundOneActivity"
        android:text="@string/roundOneActivityButton" />

    <Button
        android:id="@+id/RoundTwoActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="RoundTwoActivity"
        android:layout_below="@+id/RoundOneActivityButton"
        android:text="@string/roundTwoActivityButton" />

    <Button
        android:id="@+id/RoundThreeActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="MainMenuQualifyingThreeActivity"
        android:layout_below="@+id/RoundTwoActivityButton"
        android:text="@string/roundThreeActivityButton" />

    <Button
        android:id="@+id/RoundFourActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="RoundFourActivity"
        android:layout_below="@+id/RoundThreeActivityButton"
        android:text="@string/roundFourActivityButton" />

    <Button
        android:id="@+id/GroupStageActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="GroupStageActivity"
        android:layout_below="@+id/RoundFourActivityButton"
        android:text="@string/GroupStageActivityButton" />

        </RelativeLayout>
        </ScrollView>
    </RelativeLayout>