<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@mipmap/champions_background">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HelpParOneTextView"
                    android:id="@+id/HelpParOneTextView"
                    android:textColor="#FFFFFF"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"/>
            </TableRow>



            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HelpParTwoDescTextView"
                    android:id="@+id/HelpParTwoDescTextView"
                    android:textSize="18dp"
                    android:textColor="#FFFFFF"
                    android:layout_below="@+id/HelpParOneTextView"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp" />


            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HelpParThreeTextView"
                    android:id="@+id/HelpParThreeTextView"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:layout_below="@+id/HelpParTwoDescTextView"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HelpParFourTextView"
                    android:id="@+id/HelpParFourTextView"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:layout_below="@+id/HelpParThreeTextView"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp" />


            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HelpParFiveTextView"
                    android:textColor="#FFFFFF"
                    android:id="@+id/HelpParFiveTextView"
                    android:textSize="18dp"
                    android:layout_below="@+id/HelpParFourTextView"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp" />


            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HelpParSixTextView"
                    android:id="@+id/HelpParSixTextView"
                    android:textSize="18dp"
                    android:textColor="#FFFFFF"
                    android:layout_below="@+id/HelpParFiveTextView"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp" />


            </TableRow>

        </TableLayout>
</RelativeLayout>
    </ScrollView>



</RelativeLayout>